Fix text alignment and font

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   background-color: #eee9de;
   line-height: 1.5;
-  text-align: left;
+  text-align: center;
   vertical-align: middle;
 }
 
@@ -11,9 +11,10 @@ html {
 }
 
 h2 {
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
   color: #333;
   font-weight: bold;
+  text-align: left;
 }
 
 a:hover {
@@ -21,13 +22,14 @@ a:hover {
 }
 
 p {
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: regular;
   color: #333;
+  text-align: left;
 }
 
 a {
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: regular;
   color: #333;
   border-style: solid;
